--- a/public/style.css
+++ b/public/style.css
@@ -106,7 +106,7 @@ ul {
 }
 
 .log {
-  color: #c9c9c9;
+  color: ##c9c9c9;
   font-size: 70%;
   margin: 5px;
   text-align: center;
@@ -128,7 +128,7 @@ ul {
 }
 
 .message.typing .messageBody {
-  color: #b8b8b8;
+  color: black;
 }
 
 .username {
