🤘👭 Checkpoint ./public/index.html:22440109/34 ./public/style.css:22440109/207 ./public/main.js:22440109/331

--- a/public/style.css
+++ b/public/style.css
@@ -175,3 +175,14 @@ a {
   cursor: pointer;
   border-radius: 16px;
 }
+body {
+  padding: ;
+  background-color: white;
+  color: black;
+  font-size: 15px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}
