--- a/public/style.css
+++ b/public/style.css
@@ -165,7 +165,7 @@ a {
 /* Dropdown Button */
 .dropbtn {
   background-color: #1f1f1;
-  color: white;
+  color: black;
   padding: 16px;
   font-size: 16px;
   border: none;
@@ -181,7 +181,7 @@ a {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f1f1f;
+  background-color: #420CB;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
@@ -189,7 +189,7 @@ a {
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
+  color: white;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
@@ -202,4 +202,4 @@ a {
 .dropdown:hover .dropdown-content {display: block;}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #3e8e41;}
+.dropdown:hover .dropbtn {background-color: #f1f1f;}
