🎖🐿 Checkpoint ./public/index.html:22440109/2854 ./public/style.css:22440109/6166

--- a/public/style.css
+++ b/public/style.css
@@ -183,7 +183,7 @@ a {
   position: absolute;
   background-color: #420CB;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
@@ -196,10 +196,16 @@ a {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #f1f1f;}
+.dropdown:hover .dropbtn {
+  background-color: #f1f1f;
+}
