💓👨 Checkpoint ./public/index.html:9251183/146:22440109/126 ./public/style.css:9251183/425:22440109/62

--- a/public/style.css
+++ b/public/style.css
@@ -265,3 +265,17 @@ a {
     right: 35px;
   }
 }
+
+
+button {
+  background-color: #5e5e5e;
+  border: none;
+  color: black;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 2px 1px;
+  cursor: pointer;
+  border-radius: 14px;
+}
