--- a/public/style.css
+++ b/public/style.css
@@ -14,7 +14,7 @@ input {
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue",
     Helvetica, Arial, "Lucida Grande", sans-serif;
   color: #424242;
-  backgroud-color: #1f1f1f;
+  background-color: #1f1f1f;
 }
 
 html,
@@ -63,7 +63,7 @@ ul {
 .login.page .form .usernameInput {
   background-color: #1f1f1f;
   border: none;
-  border-bottom: 2px solid #fff;
+  border-bottom: 2px solid #ffffff;
   outline: none;
   padding-bottom: 15px;
   text-align: center;
@@ -109,6 +109,9 @@ ul {
   font-size: 70%;
   margin: 5px;
   text-align: center;
+  border-radius: 5px;
+  background-color: #080808;
+  padding: 2px;
 }
 
 /* Messages */
@@ -181,7 +184,7 @@ a {
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #420CB;
+  background-color: #420CB0;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   z-index: 1;
