--- a/public/style.css
+++ b/public/style.css
@@ -272,8 +272,8 @@ a {
 
 button {
   background-color: #5e5e5e;
+  color: #ffffff;
   border: none;
-  color: black;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
